--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,27 +4,27 @@
 	  <div class="row">
 		<div class="col-sm-4">
 
-		  <p>&copy 2016 Allan Lab. Site made with <a href="https://jekyllrb.com">Jekyll</a>;  <a href="{{ site.url }}{{ site.baseurl }}/aboutwebsite.html">copy and  modify it for your own research group.</a></p>
-              <p>We are part of the <a href="https://www.physics.leidenuniv.nl/">Leiden Institute of Physics</a> at <a href="https://www.leidenuniv.nl">Leiden University</a>.</p>
+		  <p>&copy 2023 Advanced Computing Lab. Site made with <a href="https://jekyllrb.com">Jekyll</a>;  <a href="{{ site.url }}{{ site.baseurl }}/aboutwebsite.html">copy and  modify it for your own research group.</a></p>
+              <p>We are part of the <a href="https://eller.arizona.edu/">Eller College of Management</a> at <a href="https://arizona.edu/">The University of Arizona</a>.</p>
 
 
 		   <p>  </p><p>
 
 
 		</div>
-		<div class="col-sm-4">
+		<!-- <div class="col-sm-4">
 		  Funding:<br />
       - StG and CoG from the <a href="https://erc.europa.eu">ERC</a><br />
 		  - <a href="http://www.nwo.nl/en/research-and-results/programmes/Talent+Scheme">Vidi </a> and <a href='https://www.fom.nl/en/news/press-releases/2016/11/18/28634/'>Projectruimte</a> grants from <a href="http://www.nwo.nl">NWO</a> <br />
 		  - <a href="https://www.universiteitleiden.nl/en/research/research-projects/science/frontiers-of-nanoscience-nanofront">Frontier of Nanosciences</a>, a gravity program from <a href="http://www.nwo.nl">NWO</a>
-		</div>
+		</div> -->
 		<div class="col-sm-4">
 		  Contact:<br />
-		  Oort building, Leiden University<br />
-		  Niels Bohrweg 2<br />
-		  2333 CA Leiden<br />
-		  Netherlands <br />
-            (<a href="https://goo.gl/maps/H2RjutkyoUH2">Maps</a>, <a href="http://www.physics.leidenuniv.nl/travel-directions">Directions</a>)
+		  McClelland Hall 430NN<br />
+		  1130 E. Helen St. <br />
+		  P.O. Box 210108 <br />
+		  Tucson, Arizona 85721-0108<br />
+            (<a href="https://goo.gl/maps/9USo1zxW3Kbk9MrJA">Maps</a>)
 		</div>
 	  </div>
 	</div>
