--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 	  <div class="row">
 		<div class="col-sm-4">
 
-		  <p>&copy 2023 Advanced Computing Lab. Site made with <a href="https://jekyllrb.com">Jekyll</a>;  <a href="{{ site.url }}{{ site.baseurl }}/aboutwebsite.html">copy and  modify it for your own research group.</a></p>
+		  <p>&copy 2023 Advanced Computing Lab. Site made with <a href="https://jekyllrb.com">Jekyll</a>.</p>
               <p>We are part of the <a href="https://eller.arizona.edu/">Eller College of Management</a> at <a href="https://arizona.edu/">The University of Arizona</a>.</p>
 
 
