--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
 		<li><a href="{{ site.url }}{{ site.baseurl }}/vacancies">Vacancies</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/research">Research</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/pictures">(Pics)</a></li>
+		<li><a href="https://github.com/Adavanced-Computing-Lab"><img src="{{ site.url }}{{ site.baseurl }}/images/github.svg" class="img-responsive" width="30%"/></a></li>
 	  </ul>
 	</div>
   </div>
