--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,8 @@
 	  <div class="row">
 		<div class="col-sm-4">
 
-		  <p>&copy 2023 Advanced Computing Lab. Site made with <a href="https://jekyllrb.com">Jekyll</a>.</p>
-              <p>We are part of the <a href="https://eller.arizona.edu/">Eller College of Management</a> at <a href="https://arizona.edu/">The University of Arizona</a>.</p>
+		  <p>&copy 2023 Advanced Computing Lab. Site made with <a href="https://jekyllrb.com" target="_blank">Jekyll</a>.</p>
+              <p>We are part of the <a href="https://eller.arizona.edu/" target="_blank">Eller College of Management</a> at <a href="https://arizona.edu/" target="_blank">The University of Arizona</a>.</p>
 
 
 		   <p>  </p><p>
@@ -24,7 +24,7 @@
 		  1130 E. Helen St. <br />
 		  P.O. Box 210108 <br />
 		  Tucson, Arizona 85721-0108<br />
-            (<a href="https://goo.gl/maps/9USo1zxW3Kbk9MrJA">Maps</a>)
+            (<a href="https://goo.gl/maps/9USo1zxW3Kbk9MrJA" target="_blank">Maps</a>)
 		</div>
 	  </div>
 	</div>
