--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,8 @@
 		<span class="icon-bar"></span>
 	  </button>
 	
-    <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/"><img src="{{ site.url }}{{ site.baseurl }}/images/logopic/logo.jpg" alt="..." height="36"> Advanced Computing Lab @ UArizona</a>
+	<a class="navbar-brand" href="/"><img src="/images/logopic/logo.jpg" alt="..." height="25px" style="margin-top: 0px!important;"></a>  
+	<a class="navbar-brand" href="/"> Advanced Computing Lab @ UArizona</a>
 	</div>
 	<div class="collapse navbar-collapse" id="navbar-collapse-1">
 	  <ul class="nav navbar-nav navbar-right">
