--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,10 +14,10 @@
 	<div class="collapse navbar-collapse" id="navbar-collapse-1">
 	  <ul class="nav navbar-nav navbar-right">
 		<li><a href="{{ site.url }}{{ site.baseurl }}/">Home</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/team">Team</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/vacancies">Vacancies</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/research">Research</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/team">Team</a></li>
+		<!-- <li><a href="{{ site.url }}{{ site.baseurl }}/vacancies">Vacancies</a></li> -->
 		<li style="text-decoration: underline;"><a href="https://github.com/Adavanced-Computing-Lab" target="_blank">Github</a></li>
 	  </ul>
 	</div>
