--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
 	  </button>
 	
 	<a class="navbar-brand" href="/"><img src="/images/logopic/logo.jpg" alt="..." height="25px" style="margin-top: 0px!important;"></a>  
-	<a class="navbar-brand" href="/"> Advanced Computing Lab @ UArizona</a>
+	<a class="navbar-brand" href="/"> Advanced Computing Lab @ UMass Amherst</a>
 	</div>
 	<div class="collapse navbar-collapse" id="navbar-collapse-1">
 	  <ul class="nav navbar-nav navbar-right">
@@ -18,7 +18,7 @@
 		<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/team">Team</a></li>
 		<!-- <li><a href="{{ site.url }}{{ site.baseurl }}/vacancies">Vacancies</a></li> -->
-		<li style="text-decoration: underline;"><a href="https://github.com/Adavanced-Computing-Lab" target="_blank">Github</a></li>
+		<li style="text-decoration: underline;"><a href="https://github.com/AdvComputeLab" target="_blank">Github</a></li>
 	  </ul>
 	</div>
   </div>
