--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
 		<div class="col-sm-4">
 
 		  <p>&copy 2023 Advanced Computing Lab. Site made with <a href="https://jekyllrb.com" target="_blank">Jekyll</a>.</p>
-              <p>We are part of the <a href="https://eller.arizona.edu/" target="_blank">Eller College of Management</a> at <a href="https://arizona.edu/" target="_blank">The University of Arizona</a>.</p>
+              <p>We are part of the <a href="https://www.umass.edu/engineering/academics/departments/electrical-and-computer-engineering" target="_blank">College of Engineering</a> at <a href="https://umass.edu/" target="_blank">University of Massachusetts Amherst</a>.</p>
 
 
 		   <p>  </p><p>
@@ -20,11 +20,10 @@
 		</div> -->
 		<div class="col-sm-4">
 		  Contact:<br />
-		  McClelland Hall 430NN<br />
-		  1130 E. Helen St. <br />
-		  P.O. Box 210108 <br />
-		  Tucson, Arizona 85721-0108<br />
-            (<a href="https://goo.gl/maps/9USo1zxW3Kbk9MrJA" target="_blank">Maps</a>)
+		  Knowles Engineering Building 304<br />
+		  151 Holdsworth Way <br />
+		  Amherst, MA 01003<br />
+            (<a href="https://goo.gl/maps/nz2WeHcNnRpyvEQp7" target="_blank">Maps</a>)
 		</div>
 	  </div>
 	</div>
