--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
 		<span class="icon-bar"></span>
 	  </button>
 	
-	<a class="navbar-brand" href="/"><img src="/images/logopic/logo.jpg" alt="..." height="25px" style="margin-top: 0px!important;"></a>  
+	<a class="navbar-brand" href="/"><img src="/images/logopic/favicon-32x32.png" alt="..." height="25px" style="margin-top: 0px!important;"></a>  
 	<a class="navbar-brand" href="/"> Khwarizmi Lab @ UMass Amherst</a>
 	</div>
 	<div class="collapse navbar-collapse" id="navbar-collapse-1">
