--- a/_sass/bootstrap/_variables.scss
+++ b/_sass/bootstrap/_variables.scss
@@ -609,7 +609,7 @@ $modal-backdrop-bg:           #000 !default;
 $modal-backdrop-opacity:      .5 !default;
 //** Modal header border color
 $modal-header-border-color:   #e5e5e5 !default;
-//** Modal footer border color
+//** Modal  border color
 $modal-footer-border-color:   $modal-header-border-color !default;
 
 $modal-lg:                    900px !default;
@@ -713,7 +713,7 @@ $panel-border-radius:         $border-radius-base !default;
 $panel-inner-border:          transparent !default;
 $panel-footer-bg:             #881c1c !default;
 
-$panel-default-text:          $gray-dark !default;
+$panel-default-text:          #fff !default;
 $panel-default-border:        transparent !default;
 $panel-default-heading-bg:    #f5f5f5 !default;
 
