--- a/_sass/bootstrap/_variables.scss
+++ b/_sass/bootstrap/_variables.scss
@@ -717,15 +717,15 @@ $panel-default-text:          #fff !default;
 $panel-default-border:        transparent !default;
 $panel-default-heading-bg:    #f5f5f5 !default;
 
-$panel-primary-text:          #fff !default;
+$panel-primary-text:          $gray-dark !default;
 $panel-primary-border:        transparent !default;
 $panel-primary-heading-bg:    $brand-primary !default;
 
-$panel-success-text:          $state-success-text !default;
+$panel-success-text:          #ffffff !default;
 $panel-success-border:        transparent !default;
 $panel-success-heading-bg:    $state-success-bg !default;
 
-$panel-info-text:             $state-info-text !default;
+$panel-info-text:             #ffffff !default;
 $panel-info-border:           transparent !default;
 $panel-info-heading-bg:       $state-info-bg !default;
 
