--- a/_includes/news.html
+++ b/_includes/news.html
@@ -3,7 +3,7 @@
 <h4>News</h4>
 
 {% for article in site.data.news limit:10 %}
-<p><i>{{ article.date }}</i><br>{{ article.headline | markdownify}}</p>
+<p><i><b>{{ article.date }}</b></i><br>{{ article.headline | markdownify}}</p>
 {% endfor %}
 
 <h4><a href="{{ site.url }}{{ site.baseurl }}/allnews.html">... see all News</a></h4>
