--- a/_sass/bootstrap/_variables.scss
+++ b/_sass/bootstrap/_variables.scss
@@ -713,11 +713,11 @@ $panel-border-radius:         $border-radius-base !default;
 $panel-inner-border:          transparent !default;
 $panel-footer-bg:             #881c1c !default;
 
-$panel-default-text:          #fff !default;
+$panel-default-text:          #ffffff !default;
 $panel-default-border:        transparent !default;
 $panel-default-heading-bg:    #f5f5f5 !default;
 
-$panel-primary-text:          $gray-dark !default;
+$panel-primary-text:          #ffffff !default;
 $panel-primary-border:        transparent !default;
 $panel-primary-heading-bg:    $brand-primary !default;
 
