--- a/_sass/bootstrap/_variables.scss
+++ b/_sass/bootstrap/_variables.scss
@@ -719,15 +719,15 @@ $panel-default-heading-bg:    #f5f5f5 !default;
 
 $panel-primary-text:          #ffffff !default;
 $panel-primary-border:        transparent !default;
-$panel-primary-heading-bg:    $brand-primary !default;
+$panel-primary-heading-bg:    #ffffff !default;
 
 $panel-success-text:          #ffffff !default;
 $panel-success-border:        transparent !default;
-$panel-success-heading-bg:    $state-success-bg !default;
+$panel-success-heading-bg:    #ffffff !default;
 
 $panel-info-text:             #ffffff !default;
 $panel-info-border:           transparent !default;
-$panel-info-heading-bg:       $state-info-bg !default;
+$panel-info-heading-bg:       #ffffff !default;
 
 $panel-warning-text:          $state-warning-text !default;
 $panel-warning-border:        transparent !default;
