--- a/_sass/bootstrap/_variables.scss
+++ b/_sass/bootstrap/_variables.scss
@@ -69,7 +69,7 @@ $line-height-computed:    floor(($font-size-base * $line-height-base)) !default;
 $headings-font-family:    inherit !default;
 $headings-font-weight:    400 !default;
 $headings-line-height:    1.1 !default;
-$headings-color:          $-dark !default;
+$headings-color:          $gray-dark !default;
 
 
 //== Iconography
@@ -136,7 +136,7 @@ $table-bg-hover:                #f5f5f5 !default;
 $table-bg-active:               $table-bg-hover !default;
 
 //** Border color for table and cell borders.
-$table-border-color:            $-lighter !default;
+$table-border-color:            $gray-lighter !default;
 
 
 //== Buttons
@@ -145,8 +145,8 @@ $table-border-color:            $-lighter !default;
 
 $btn-font-weight:                normal !default;
 
-$btn-default-color:              $ !default;
-$btn-default-bg:                 $-lighter !default;
+$btn-default-color:              $gray !default;
+$btn-default-bg:                 $gray-lighter !default;
 $btn-default-border:             darken($btn-default-bg, 5%) !default;
 
 $btn-primary-color:              #fff !default;
@@ -169,7 +169,7 @@ $btn-danger-color:               #fff !default;
 $btn-danger-bg:                  $brand-danger !default;
 $btn-danger-border:              darken($btn-danger-bg, 5%) !default;
 
-$btn-link-disabled-color:        $-light !default;
+$btn-link-disabled-color:        $gray-light !default;
 
 // Allows for customizing button radius independently from global border radius
 $btn-border-radius-base:         $border-radius-base !default;
@@ -184,10 +184,10 @@ $btn-border-radius-small:        $border-radius-small !default;
 //** `<input>` background color
 $input-bg:                       #fff !default;
 //** `<input disabled>` background color
-$input-bg-disabled:              $-lighter !default;
+$input-bg-disabled:              $gray-lighter !default;
 
 //** Text color for `<input>`s
-$input-color:                    $ !default;
+$input-color:                    $gray !default;
 //** `<input>` border color
 $input-border:                   darken(#f8f8f8, 6.5%) !default;
 
@@ -204,7 +204,7 @@ $input-border-radius-small:      $border-radius-small !default;
 $input-border-focus:             #66afe9 !default;
 
 //** Placeholder text color
-$input-color-placeholder:        $-light !default;
+$input-color-placeholder:        $gray-light !default;
 
 //** Default `.form-control` height
 $input-height-base:              ($line-height-computed + ($padding-base-vertical * 2) + 4) !default;
