--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
 		<li><a href="{{ site.url }}{{ site.baseurl }}/research">Research</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/team">Team</a></li>
-		<!-- <li><a href="{{ site.url }}{{ site.baseurl }}/vacancies">Vacancies</a></li> -->
+		<li><a href="{{ site.url }}{{ site.baseurl }}/pictures">(Pics)</a></li>
 		<li style="text-decoration: underline;"><a href="https://github.com/KhwarizmiLab" target="_blank">Github</a></li>
 	  </ul>
 	</div>
