--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,21 +3,10 @@
 	<div class="container-fluid">
 	  <div class="row">
 		<div class="col-sm-4">
-
-		  <p>&copy 2023 Khwarizmi Lab. Site made with <a href="https://jekyllrb.com" target="_blank">Jekyll</a>.</p>
-              <p>We are part of the <a href="https://www.umass.edu/engineering/academics/departments/electrical-and-computer-engineering" target="_blank">College of Engineering</a> at <a href="https://umass.edu/" target="_blank">University of Massachusetts Amherst</a>.</p>
-
-
-		   <p>  </p><p>
-
-
+			<p>We are part of the <a href="https://www.umass.edu/engineering/academics/departments/electrical-and-computer-engineering" target="_blank">College of Engineering</a> at <a href="https://umass.edu/" target="_blank">University of Massachusetts Amherst</a>.</p>
+			<p>&copy 2023 Khwarizmi Lab. Site made with <a href="https://jekyllrb.com" target="_blank">Jekyll</a>.</p>
+			<p>Design inspired from <a href="https://www.allanlab.org/" target="_blank">Allan Lab</a></p>
 		</div>
-		<!-- <div class="col-sm-4">
-		  Funding:<br />
-      - StG and CoG from the <a href="https://erc.europa.eu">ERC</a><br />
-		  - <a href="http://www.nwo.nl/en/research-and-results/programmes/Talent+Scheme">Vidi </a> and <a href='https://www.fom.nl/en/news/press-releases/2016/11/18/28634/'>Projectruimte</a> grants from <a href="http://www.nwo.nl">NWO</a> <br />
-		  - <a href="https://www.universiteitleiden.nl/en/research/research-projects/science/frontiers-of-nanoscience-nanofront">Frontier of Nanosciences</a>, a gravity program from <a href="http://www.nwo.nl">NWO</a>
-		</div> -->
 		<div class="col-sm-4">
 		  Contact:<br />
 		  Knowles Engineering Building 304<br />
