--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
 		<div class="col-sm-4">
 			<p>We are part of the <a href="https://www.umass.edu/engineering/academics/departments/electrical-and-computer-engineering" target="_blank">College of Engineering</a> at <a href="https://umass.edu/" target="_blank">University of Massachusetts Amherst</a>.</p>
 			<p>&copy 2023 Khwarizmi Lab. Site made with <a href="https://jekyllrb.com" target="_blank">Jekyll</a>.</p>
-			<p>Design inspired from <a href="https://www.allanlab.org/" target="_blank">Allan Lab</a></p>
+			<p>Design inspired from <a href="https://www.allanlab.org/" target="_blank">Allan Lab.</a></p>
 		</div>
 		<div class="col-sm-4">
 		  Contact:<br />
