--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,6 +1,6 @@
 
 <div class="well">
-<h4>News</h4>
+<h3>Latest News</h3>
 
 {% for article in site.data.news limit:7 %}
 <p><i><b>{{ article.date }}</b></i><br>{{ article.headline | markdownify}}</p>
