--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
 		<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/team">Team</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/pictures">(Pics)</a></li>
-		<li style="text-decoration: underline;"><a href="https://github.com/KhwarizmiLab" target="_blank">Github</a></li>
+		<li ><a href="https://github.com/KhwarizmiLab" target="_blank">Github<i class="fa fa-external-link"></i></a></li>
 	  </ul>
 	</div>
   </div>
