--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
 		<li><a href="{{ site.url }}{{ site.baseurl }}/">Home</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/research">Research</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/media.html">Media News</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/media.html">Press</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/team">Team</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/pictures">Gallery</a></li>
 		<li ><a href="https://github.com/KhwarizmiLab" target="_blank">Github <i class="fa fa-external-link"></i></a></li>
